--- a/MatrixResponsibility.Client/App.razor
+++ b/MatrixResponsibility.Client/App.razor
@@ -1,12 +1,19 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿@inject NavigationManager navigation
+<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+       <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" > 
+            <Authorizing>
+                <p>Ожидайте, идет процесс авторизации</p>
+            </Authorizing>
+            <NotAuthorized >
+                <p>не авторизован</p>
+            </NotAuthorized> 
+        </AuthorizeRouteView>
     </Found>
     <NotFound>
         <PageTitle>Not found</PageTitle>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
+            <p role="alert">Указан не верный адрес</p>
         </LayoutView>
     </NotFound>
 </Router>
