--- a/MatrixResponsibility.Client/_Imports.razor
+++ b/MatrixResponsibility.Client/_Imports.razor
@@ -6,5 +6,8 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
 @using MatrixResponsibility.Client
 @using MatrixResponsibility.Client.Layout
+@using MatrixResponsibility.Client.Services
