Добавлен базовый SignalR

--- a/MatrixResponsibility.Client/Pages/Home.razor
+++ b/MatrixResponsibility.Client/Pages/Home.razor
@@ -4,4 +4,12 @@
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
+@if (users != null)
+{
+    @foreach (var u in users)
+    {
+        <p>
+            @u.Id - @u.Login
+        </p>
+    }
+}
