--- a/MatrixResponsibility.Client/App.razor
+++ b/MatrixResponsibility.Client/App.razor
@@ -6,7 +6,7 @@
                 <p>Ожидайте, идет процесс авторизации</p>
             </Authorizing>
             <NotAuthorized >
-                <p>не авторизован</p>
+                <MatrixResponsibility.Client.Pages.ReditectToLogin/>
             </NotAuthorized> 
         </AuthorizeRouteView>
     </Found>
