--- a/MatrixResponsibility.Client/_Imports.razor
+++ b/MatrixResponsibility.Client/_Imports.razor
@@ -11,3 +11,4 @@
 @using MatrixResponsibility.Client
 @using MatrixResponsibility.Client.Layout
 @using MatrixResponsibility.Client.Services
+@using MatrixResponsibility.Client.Models
