--- a/MatrixResponsibility.Client/_Imports.razor
+++ b/MatrixResponsibility.Client/_Imports.razor
@@ -12,3 +12,7 @@
 @using MatrixResponsibility.Client.Layout
 @using MatrixResponsibility.Client.Services
 @using MatrixResponsibility.Client.Models
+@using Radzen
+@using Radzen.Blazor
+@using Blazored.LocalStorage
+@using MatrixResponsibility.Common.Constants
