--- a/MatrixResponsibility.Client/wwwroot/css/app.css
+++ b/MatrixResponsibility.Client/wwwroot/css/app.css
@@ -1,3 +1,7 @@
+html, body {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
 .valid.modified:not([type=checkbox]) {
     outline: 1px solid #26b050;
 }
