--- a/MatrixResponsibility.Client/_Imports.razor
+++ b/MatrixResponsibility.Client/_Imports.razor
@@ -16,3 +16,4 @@
 @using Radzen.Blazor
 @using Blazored.LocalStorage
 @using MatrixResponsibility.Common.Constants
+@using MatrixResponsibility.Common
