--- a/MatrixResponsibility.Client/App.razor
+++ b/MatrixResponsibility.Client/App.razor
@@ -5,7 +5,7 @@
 
 <Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
-        <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)">
+        <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MyLayout)">
             <Authorizing>
                 <p>Ожидайте, идет процесс авторизации</p>
             </Authorizing>
@@ -16,7 +16,7 @@
     </Found>
     <NotFound>
         <PageTitle>Not found</PageTitle>
-        <LayoutView Layout="@typeof(MainLayout)">
+        <LayoutView Layout="@typeof(MyLayout)">
             <p role="alert">Указан не верный адрес</p>
         </LayoutView>
     </NotFound>
