--- a/MatrixResponsibility.Client/_Imports.razor
+++ b/MatrixResponsibility.Client/_Imports.razor
@@ -17,3 +17,5 @@
 @using Blazored.LocalStorage
 @using MatrixResponsibility.Common.Constants
 @using MatrixResponsibility.Common
+@using MatrixResponsibility.Common.DTOs
+
